# nes

./: Cargo.toml  README.md  app.html  diff  diff.txt
.cargo/: config.toml
.github/workflows/: rust.yml
docs/: doc.md
src/: bus.rs  cpu.rs  doc.md  emscripten.rs  lib.rs  main.rs  memory.rs  opcodes.rs  rom.rs
src/emulator/: addressing_modes.rs  bus.rs  cpu.rs  instructions.rs  interrupts.rs  joypad.rs  memory.rs  mod.rs  opcodes.rs  ppu.rs  rom.rs
src/helpers/: cpu_helpers.rs  debugging.rs  mod.rs  trace.rs
src/player/: controls.rs  mod.rs  palette.rs  player.rs
tests/: tests.rs
tests/cpu/: mod.rs  test_aac_u.rs  test_aax_u.rs  test_adc.rs  test_and.rs  test_arr_u.rs  test_asl.rs  test_asr_u.rs  test_atx_u.rs  test_axa_u.rs  test_axs_u.rs  test_bcc.rs  test_bcs.rs  test_beq.rs  test_bit.rs  test_bmi.rs  test_bne.rs  test_bpl.rs  test_bvc.rs  test_bvs.rs  test_clc.rs  test_cld.rs  test_cli.rs  test_clv.rs  test_cmp.rs  test_cpx.rs  test_cpy.rs  test_dcp_u.rs  test_dec.rs  test_dex.rs  test_dey.rs  test_eor.rs  test_flags.rs  test_inc.rs  test_inx.rs  test_iny.rs  test_isc_u.rs  test_jmp.rs  test_jsr.rs  test_lar_u.rs  (+36 more)
tests/helpers/: mod.rs
tests/joypad/: mod.rs  test_joypad.rs
tests/ppu/: mod.rs  test_address.rs  test_mirroring.rs  test_read_write_data.rs  test_scroll.rs  test_status.rs
tests/rom/: mod.rs  test_rom_header.rs
tests/trace/: mod.rs  test_trace.rs
