[package]
name = "nes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.1", features = ["macros"] }
lazy_static = "1.4.0"
bitflags = "2.0.0-rc.2"

sdl2 = "0.35"
rand = "0.8.5"

expect-test = "1.4.0"